atualização de conteúdo

--- a/notebooks/01-data_types.ipynb
+++ b/notebooks/01-data_types.ipynb
@@ -921,7 +921,7 @@
     "id": "scTptEEUHXOG"
    },
    "source": [
-    "### Operador or\n",
+    "#### Operador or\n",
     "\n",
     "O operador **or** ou ou lógico, é um operador binário que tem o seguinte comportamento. O **or** é verdadeiro quando pelo menos um dos seus operandos é verdadeiro (True), caso contrário ele é falso (False). A tabela verdade do **or** está apresnetada abaixo:\n",
     "\n",
@@ -1666,7 +1666,7 @@
     "id": "xhwmO7fYfH5L"
    },
    "source": [
-    "##Fatiamento de Strings\n",
+    "## Fatiamento de Strings\n",
     "\n",
     "Fatiar significa pegar pedaços da string\n",
     "\n",
