--- a/notebooks/02-decision_structure.ipynb
+++ b/notebooks/02-decision_structure.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -148,12 +148,12 @@
     "id": "Hncy0zpPJxJy"
    },
    "source": [
-    "(**Exercício 2**) Escreva um programa que pergunte a distância que um passageiro deseja percorrer em km. Calcule o preço da passagem, cobrando R\\$ 0,50 por km para viagens de até 200 km, e R\\$ 0,45 para viagens mais longas. Utilize o bloco abaixo para testar o seu programa.\n"
+    "(**Exercício 2**) Escreva um programa que pergunte a distância que um passageiro deseja percorrer em km. Calcule o preço da passagem, cobrando R\\\\$ 0,50 por km para viagens de até 200 km, e R\\\\$ 0,45 para viagens mais longas. Utilize o bloco abaixo para testar o seu programa.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -175,12 +175,12 @@
     "\n",
     "Por exemplo,vamos ver uma solução para o problema asseguir com estrturas aninhadas.\n",
     "\n",
-    "Os planos da empresa Tchau são bem interessantes e oferecem preços diferenciados de acordo com a quantidade de minutos usados no mês. Abaixo de 200 minutos, a empresa cobra R\\$ 0,20 por minuto. Entre 200 e 400 minutos, o preço é de R\\$ 0,18. Acima de 400 minutos, o preço por minuto é de R\\$ 0,15. \n"
+    "Os planos da empresa Tchau são bem interessantes e oferecem preços diferenciados de acordo com a quantidade de minutos usados no mês. Abaixo de 200 minutos, a empresa cobra R\\\\$ 0,20 por minuto. Entre 200 e 400 minutos, o preço é de R\\\\$ 0,18. Acima de 400 minutos, o preço por minuto é de R\\\\$ 0,15. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -309,12 +309,12 @@
     "\n",
     "Nesta seção são apresentadas as respostas das questões apresentadas. \n",
     "\n",
-    "Exercício 1"
+    "## Exercício 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -336,12 +336,12 @@
     "id": "9oakp9pbDKhb"
    },
    "source": [
-    "Exercício 2"
+    "## Exercício 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -365,28 +365,18 @@
     "id": "-HWoiiM6DxMi"
    },
    "source": [
-    "Exercício 3"
+    "## Exercício 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "eU4c6Yg8D0ym"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Informe o tipo do produto: 10\n",
-      "Tipo inexistente!! Informe um valor entre 1 e 5.\n",
-      "O valor do pedido é 0.00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tipo = int(input(\"Informe o tipo do produto: \"))\n",
     "\n",
@@ -418,12 +408,12 @@
     "id": "7HB_MxN_X3S_"
    },
    "source": [
-    "Exercício 4"
+    "## Exercício 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
