--- a/notebooks/05-tuples_dicts.ipynb
+++ b/notebooks/05-tuples_dicts.ipynb
@@ -16,9 +16,13 @@
     "\n",
     "# Tuplas\n",
     "\n",
-    "* Tuplas podem ser vistas como listas em Python, com a grande diferença de serem imutáveis.\n",
+    "Tuplas podem ser vistas como listas em Python, com a grande diferença de serem imutáveis.\n",
     "\n",
-    "* Elas são ideias para representar listas de valores constantes e para realizar operações de empacotamento de desempacotamento. \n"
+    "Uma tupla é definida em python a partir da utilização de ( ) (parentêses) enquanto que as listas são definidas utilizando [ ] (colchetes). \n",
+    "\n",
+    "AS tuplas são ideias para representar um conjunto de valores constantes e para realizar operações de empacotamento de desempacotamento. \n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -89,6 +93,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tamanho da tupla"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -102,6 +113,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mudança do valor de uma posição da tupla"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -111,7 +129,23 @@
    },
    "outputs": [],
    "source": [
-    "tupla[0] = “A”"
+    "tupla[0] = \"A\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "<b>INFO:</b> Tuplas são imutáveis.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Realizando o empacotamento"
    ]
   },
   {
@@ -124,9 +158,15 @@
    },
    "outputs": [],
    "source": [
-    "#Empacotamento\n",
     "tupla = 100, 200, 300\n",
     "tupla"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Realizando o desempacotamento"
    ]
   },
   {
@@ -139,7 +179,6 @@
    },
    "outputs": [],
    "source": [
-    "#Desempacotamento\n",
     "a, b, c = tupla\n",
     "a"
    ]
@@ -158,6 +197,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Essa funcionalidade que nos permite trocar valores rapidamente"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -167,7 +213,6 @@
    },
    "outputs": [],
    "source": [
-    "#Essa funcionalidade que nos permite trocar valores rapidamente\n",
     "a, b = 10, 20\n",
     "a, b = b, a\n",
     "a"
@@ -184,6 +229,15 @@
    "outputs": [],
    "source": [
     "b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "<b>INFO:</b> Tupla é um tipo importante quando formos trabalhar com funções.\n",
+    "</div>"
    ]
   },
   {
@@ -296,17 +350,17 @@
    "source": [
     "# Dicionário\n",
     "\n",
-    "* Dicionários (dict) consistem em uma estrutura de dados similar a lista, msa com propriedades de acesso diferentes. \n",
+    "Dicionários (dict) consistem em uma estrutura de dados similar a lista, msa com propriedades de acesso diferentes. \n",
     "\n",
-    "* Um dicionário é composto por um conjunto de chaves e valores. O dicionário em si consiste em relacionar uma chave a um valor específico. \n",
+    "Um dicionário é composto por um conjunto de chaves e valores. O dicionário em si consiste em relacionar uma chave a um valor específico. \n",
     "\n",
-    "* Em Python, dicionários são criados com chaves ( { } ). \n",
+    "Em Python, dicionários são criados com chaves ( { } ). \n",
     "\n",
-    "* Cada elemento no dicionário é a combinação de chave/valor\n",
+    "Cada elemento no dicionário é a combinação de chave/valor\n",
     "\n",
     "![texto alternativo](https://i.imgur.com/hVcn3WC.png)\n",
     "\n",
-    "* Um dicionário é acessado pela suas chaves."
+    "Um dicionário é acessado pela suas chaves."
    ]
   },
   {
@@ -324,6 +378,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Editando uma chave existente"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -335,6 +396,13 @@
    "source": [
     "tabela[\"alface\"] = 1.2\n",
     "tabela[\"alface\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Criando um item novo no dicionário (cebola não existia no dicionário inicia)."
    ]
   },
   {
@@ -365,6 +433,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obtendo o valor de um item"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -375,6 +450,23 @@
    "outputs": [],
    "source": [
     "tabela[\"manga\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "<b>INFO:</b> manga não é uma chave existente no dicionário. Avalie o erro que foi gerado.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Teremos mais cuidado ao obter uma chave do dicionário. \n",
+    "Primeiros vamos checar se ela existe nele."
    ]
   },
   {
@@ -404,6 +496,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Com o operador in podemos checar se uma chave existe no dicionário e evitar a geração de um erro. \n",
+    "\n",
+    "Utilizando o método _keys_ obtemos todas as chaves contidas no dicionário."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -414,6 +515,13 @@
    "outputs": [],
    "source": [
     "tabela.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De forma oposta, o método _values_ retorna todos os valores do dicionário. "
    ]
   },
   {
@@ -430,6 +538,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A função len pode ser utilizada para saber a quantidade de pares (chave/valor) do dicionário."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -440,6 +555,13 @@
    "outputs": [],
    "source": [
     "len(tabela)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Um item do dicionário pode ser removido utilizando a função _del_"
    ]
   },
   {
@@ -463,16 +585,16 @@
     "id": "6-3EkXwSblxx"
    },
    "source": [
-    "Keys e values são dois tipos de métodos do dicionário. Existem outros que podem ser utilizados na manipulação desse tipo de dados.  \n",
+    "_keys_ e _values_ são dois tipos de métodos do dicionário. Existem outros que podem ser utilizados na manipulação desse tipo de dados.  \n",
     "\n",
     "## Outros métodos do tipo dicionário: \n",
     "\n",
-    "* clear(): Remove todos os itens\n",
-    "* copy(): Realiza a cópia do dicionário\n",
-    "* fromkeys(): Cria um dicionário com a sequência informada\n",
-    "* get(): Retorna o valor da chave informada\n",
-    "* items(): Retorna uma tupla no formato (chave, valor) para cada item do dicionário\n",
-    "* update(): Atualizar um item do dicionário\n",
+    "* **clear**(): Remove todos os itens\n",
+    "* **copy**(): Realiza a cópia do dicionário\n",
+    "* **fromkeys**(): Cria um dicionário com a sequência informada\n",
+    "* **get**(): Retorna o valor da chave informada\n",
+    "* **items**(): Retorna uma tupla no formato (chave, valor) para cada item do dicionário\n",
+    "* **update**(): Atualizar um item do dicionário\n",
     "\n",
     "## Leitura Recomendada\n",
     "\n",
