--- a/notebooks/06-functions.ipynb
+++ b/notebooks/06-functions.ipynb
@@ -7,9 +7,12 @@
     "id": "6ZH0Dqa1otrF"
    },
    "source": [
-    "# Funções\n",
+    "Objetivo do notebook: \n",
+    "* Apresentar as instruções utilizadas para criar funções em Python.\n",
     "\n",
-    "Apresentar as instruções utilizadas para criar funções em Python. Diferença entre escopo local e global\n"
+    "\n",
+    "# Funções\n",
+    "\n"
    ]
   },
   {
@@ -119,9 +122,11 @@
     "id": "FPYV2R_Wqlu7"
    },
    "source": [
-    "* Uma função só é executada se ela for chamada no código. \n",
-    "* Uma função precisa ser criada ou importada antes de ser usada.\n",
-    "* Uma função pode também não retornar nenhum valor "
+    "Uma função só é executada se ela for chamada no código. \n",
+    "\n",
+    "Uma função precisa ser criada ou importada antes de ser usada.\n",
+    "\n",
+    "Uma função pode também não retornar nenhum valor "
    ]
   },
   {
@@ -158,200 +163,72 @@
     "id": "GFd_kW8ArK4T"
    },
    "source": [
-    "1. Crie uma função que recebe dois números e imprime na tela qual é o maior.  \n",
+    "1. Crie uma função que recebe dois números e imprime na tela qual é o maior.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "2. Escreva uma função que receba a base e a altura de um triângulo e retorne a sua área. \n",
-    "A = (base x altura) / 2\n",
-    "3. Implemente uma função que recebe dois valores inteiros e retorne o resultado da divisão e do resto da divisão desses dois números.\n",
-    "4. Crie uma função que receba uma lista e um valor. Caso o valor esteja na lista, a função deve retornar as posições (índices) do elemento na lista. Se o elemento não estiver na lista, a função deve retornar uma lista vazia.\n",
+    "A = (base x altura) / 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Implemente uma função que recebe dois valores inteiros e retorne o resultado da divisão e do resto da divisão desses dois números."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Crie uma função que receba uma lista e um valor. Caso o valor esteja na lista, a função deve retornar as posições (índices) do elemento na lista. Se o elemento não estiver na lista, a função deve retornar uma lista vazia."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "5. Crie uma função que calcula o fatorial de um número. "
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "ln0PopS2rkj0"
-   },
-   "source": [
-    "## Variaveis Globais e Locais"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "bvrIW0-irs1P"
-   },
-   "source": [
-    "Quando usamos funções, começamos a trabalhar com variáveis externas ou globais e variáveis internas ou locais. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "f1f12DRmrtto"
-   },
-   "source": [
-    "A diferença dessas duas variáveis é a visibilidade ou escopo das variáveis. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "pX2f4iucr0Cy"
-   },
-   "source": [
-    "### Variavel Local\n",
-    "\n",
-    "Uma variável local a uma função existe apenas dentro dela, sendo normalmente inicializada a cada chamada. Assim não podemos acessá-la fora da função que a criou. \n",
-    "\n",
-    "```\n",
-    "def nome(parametros):\n",
-    "  variavel_local = parametros\n",
-    "  return retorno_da_função\n",
-    "\n",
-    "print(nome(chamando_função))\n",
-    "```\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "QcoMc6U8sCO4"
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "def soma(a,b):\n",
-    "  s = a + b\n",
-    "  return s"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
-    "colab_type": "code",
-    "executionInfo": {
-     "elapsed": 956,
-     "status": "ok",
-     "timestamp": 1593125704351,
-     "user": {
-      "displayName": "Gabriel Lima",
-      "photoUrl": "",
-      "userId": "09579688607165550943"
-     },
-     "user_tz": 180
-    },
-    "id": "yKnqAsuXsOn4",
-    "outputId": "564fb4b3-bc3b-4744-dee0-3c9887bb958b"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(soma(4,5))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "hEg4HDQwsuEn"
-   },
-   "source": [
-    "### Variavel Global\n",
-    "\n",
-    "Uma variável global é definida fora de uma função, podendo ser vista por todo o programa e por todos os módulos que importarem o módulo no qual ela foi criada.\n",
-    "\n",
-    "```\n",
-    "variavel_global = valor\n",
-    "\n",
-    "def nome():\n",
-    "  return retorno_da_função\n",
-    "\n",
-    "print(nome(chamando_função))\n",
-    "```\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "Ow9V4fbitEOn"
-   },
-   "outputs": [],
-   "source": [
-    "empresa = 'Unidos venceremos LTDA'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "elHWYkcEtI7Q"
-   },
-   "outputs": [],
-   "source": [
-    "def imprima_cabecalho():\n",
-    "  print(empresa)\n",
-    "  print('-'*len(empresa))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 51
-    },
-    "colab_type": "code",
-    "executionInfo": {
-     "elapsed": 565,
-     "status": "ok",
-     "timestamp": 1593126007195,
-     "user": {
-      "displayName": "Gabriel Lima",
-      "photoUrl": "",
-      "userId": "09579688607165550943"
-     },
-     "user_tz": 180
-    },
-    "id": "qcO9qFektZGu",
-    "outputId": "0fcc5b82-fa22-4a7b-9dee-60c9164227e4"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Unidos venceremos LTDA\n",
-      "----------------------\n"
-     ]
-    }
-   ],
-   "source": [
-    "imprima_cabecalho()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -465,12 +342,19 @@
    "source": [
     "### Exercicio\n",
     "\n",
-    "crie a funcção do fibonacci\n",
+    "Crie a função que retorna o n-esimo termo da sequência de fibonacci.\n",
     "\n",
-    "definição:\n",
+    "Definição:\n",
     "\n",
     "![texto alternativo](https://i.imgur.com/TFD5mnO.png)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
